--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
+  <% if signed_in? %>
+    <%= link_to "Sign out", session_path, method: :delete %>
+    <p>Signed in as <%= current_user.username %></p>
+  <% else %>
+    <%= link_to "Sign in", new_session_path %>
+    <%= link_to "Sign up", new_user_path %>
+  <% end %>
+  <%= yield %>
 
 </body>
 </html>
