--- a/app/views/shouts/_shout.html.erb
+++ b/app/views/shouts/_shout.html.erb
@@ -1,3 +1,5 @@
-<div><%= shout.content %></div>
-<div>shouted by <%= shout.username %></div>
-<div>shouted at <%= shout.created_at %></div>
+<p>
+  <div><%= shout.content %></div>
+  <div>shouted by <%= shout.username %></div>
+  <div>shouted at <%= time_ago_in_words(shout.created_at) %></div>
+</p>
