adding pagination to users show page and dashboard, using kaminari

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,5 +6,5 @@
 <% else %>
   <%= button_to "FOLLOW", follow_user_path(@user) %>
 <% end %>
-<%= render @user.shouts.order(created_at: :desc) %> 
+<%= render @shouts %> 
 
