Linked usernames in shouts
*used shout_helper to find usernames starting with @
*replaced with link to user's profile

--- a/app/views/shouts/_shout.html.erb
+++ b/app/views/shouts/_shout.html.erb
@@ -3,3 +3,12 @@
   <div>shouted by <%= link_to shout.username, user_path(shout.username) %></div>
   <div>shouted at <%= time_ago_in_words(shout.created_at) %></div>
 </p>
+
+<p>
+  <% if current_user.liked_shouts.include?(shout) %>
+    <%= button_to "Unlike Shout", shout_like_path(shout), method: :delete %>
+  <% else %>
+    <%= button_to "Like Shout", shout_like_path(shout) %>
+  <% end %>
+  <%= pluralize(shout.likes.count, "like") %>
+</p>
