--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
   <% if signed_in? %>
     <%= link_to "Sign out", session_path, method: :delete %>
     <p>Signed in as <%= current_user.username %></p>
+    <%= form_tag search_path, method: :get do %>
+      <%= text_field_tag :query %>
+      <%= submit_tag "Search" %>
+    <% end %>
   <% else %>
     <%= link_to "Sign in", new_session_path %>
     <%= link_to "Sign up", new_user_path %>
